@startuml
skinparam classBackgroundColor #ADD8E6
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods
'left to right direction


title Project Domain Model

class ProductionLine{

}

class Administrator{

}

class SystemUsers{
    mail
    password
    name
    NIF
    phoneNumber
}

class PlantFloorManager{

}
class ProductionManager{

}

class RawMaterial {
    name
}

class Product {
    name
    description
}

class Component {
    name
}

class Machine {
    id
    executionTime
    setupTime
}

class Employee {
    name
    NIF
    phoneNumber
    birthdate
    mail
}

class Operation {
    id
    designation
    expectedDuration
}

class Workstation {
    name
    capacity
    status
    type
}

class Order {
    product(s)
    orderDate
    deliveryDate
}

class Client {
    name
    NIF
    phoneNumber
    mail
}

class Address {
    street
    city
    zipcode
}

class ProductFamily {
    name
}

class Supplier{
    name
    phoneNumber
    mail
}

Supplier "1..*" -- "1..*" RawMaterial : provides >
Supplier "1..*" -- "1..*" Component : provides >


Operation "1..*" -- "0..*" RawMaterial : needs >
Operation "1..*" -- "0..*" Component : needs >

Administrator"1" -- "1" SystemUsers: is a >
ProductionManager"1" -- "1" SystemUsers: is a >
PlantFloorManager"1" -- "1" SystemUsers: is a >
Administrator"1..*" -- "1..*" SystemUsers: manages >
PlantFloorManager"1..*" -- "1..*" ProductionLine: specifies >
Workstation "1" -- "0..*" Machine: has >
ProductionManager "1..*" -- "1..*" Product: manages >
Operation "1..*" -- "1..*" Product : is made of <
Order "1" -- "1..*" Operation : has >
Client "1" -- "1..*" Order : places >
Machine "1..*" -- "1" Operation : processes >
Employee "0..*" -- "0..*" Workstation : operates >
Workstation "1" -- "1..*" ProductionLine : part of >
Client "1..*" -- "1" Address : has >
Order "0..*" -- "1" Address : to be delivered >
Employee "1..*" -- "1" Address : has >
SystemUsers "1..*" -- "1" Address : has >
Product "1..*" -- "1" ProductFamily : is part of >
ProductionLine "1" -- "1..*" Operation : consists of >
@enduml